# do-ops

./: CLAUDE.md  DigitalOcean-public.v2.yaml  README.md  digitalocean-api-analysis.md
c/: CMakeLists.txt  Makefile  README.md
c/examples/: basic_usage.c
c/include/digitalocean/: client.h  config.h  http.h  types.h
c/src/: client.c  config.c  http.c  json.c  memory.c
c/src/cli/: account.c  config.c  droplets.c  main.c
go/: README.md  go.mod
go/cmd/cli/: account.go  config.go  droplets.go  main.go
go/internal/auth/: auth.go
go/pkg/client/: client.go
go/pkg/config/: config.go
go/pkg/types/: account.go  common.go  droplet.go
js/: README.md  package-lock.json  package.json  tsconfig.json
ruby/: README.md  digitalocean.gemspec
ruby/examples/: basic_usage.rb
ruby/lib/: digitalocean.rb
ruby/lib/digitalocean/: cli.rb  client.rb  config.rb  models.rb  version.rb
ruby/lib/digitalocean/cli/: account.rb  base.rb  config.rb  droplets.rb
ruby/lib/digitalocean/models/: account.rb  base.rb  droplet.rb  image.rb  network.rb  region.rb  size.rb
rust/: Cargo.toml  README.md  build-check.md
rust/crates/do-cli/: Cargo.toml
rust/crates/do-cli/src/: main.rs
rust/crates/do-cli/src/commands/: account.rs  config.rs  droplets.rs  mod.rs
rust/crates/do-client/: Cargo.toml
rust/crates/do-client/src/: client.rs  config.rs  error.rs  lib.rs
rust/crates/do-types/: Cargo.toml
rust/crates/do-types/src/: account.rs  common.rs  droplet.rs  lib.rs
swift/: Package.swift  README.md
swift/Examples/: basic_usage.swift
swift/Sources/DigitalOceanCLI/: main.swift
swift/Sources/DigitalOceanKit/: Client.swift  Config.swift  DigitalOceanKit.swift  Types.swift
swift/Tests/DigitalOceanKitTests/: DigitalOceanKitTests.swift
