[workspace]
members = [
    "crates/do-types",
    "crates/do-client", 
    "crates/do-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["DigitalOcean CLI Team"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/fo/do-op"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# CLI dependencies  
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7.0"
console = "0.15"

# Config dependencies
toml = "0.8"
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"

# Internal workspace crates
do-types = { path = "crates/do-types" }
do-client = { path = "crates/do-client" }