[package]
name = "do-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DigitalOcean API type definitions"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true